--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <!-- FORMULARIO -->
     <section id="registro" class="container py-5">
-        <h2 class="mb-4">Ingresa con tus datos</h2>
+        <h2 class="mb-4">Ingresa con tus datos o Regístrate</h2>
         <form id="form-registro" class="row g-3">
             <div class="col-md-4">
                 <label class="form-label">Nombre completo</label>
